--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,7 +61,7 @@ dependencies {
 
 }
 
-sceneform.asset('sampledata/Aviators2.fbx',
+sceneform.asset('sampledata/spec_rectanglefaceA.fbx',
         'default',
-        'sampledata/aviators2.sfa',
-        'src/main/res/raw/aviators2')
+        'sampledata/spec_rectanglefaceA.sfa',
+        'src/main/res/raw/spec_rectanglefacea')
